# build-my-startup

./: .gitignore  CONFIG_GUIDE.md  FRAMEWORK_SUMMARY.md  README.md  pyproject.toml  requirements.txt
agent_framework/: __init__.py  agents_registry.py  ai_agent.py  code_extraction.py  code_safety.py  context_store.py  message_bus.py  offline_ai_adapter.py  orchestrator.py  paths.py  pretty_print.py
agent_framework/pipelines/: standard_build.py
agent_framework/tests/: test_collaboration.py  test_messaging.py  test_simple.py  test_system.py
apps/: README.md
apps/commentary_app/: IMPLEMENTATION_SUMMARY.md  README.md
apps/commentary_app/scripts/: build_app.py  test_app.py
apps/expense_tracker/scripts/: build_app.py
apps/face_detection_app/scripts/: build_app.py  create_more_mvps.py  test_camera_feed.py
apps/recipe_manager_app/: FEATURES.md  README.md
apps/recipe_manager_app/scripts/: build_app.py
apps/weather_dashboard/scripts/: build_app.py
build_my_startup/: .gitignore  agent.py  agent_directives.py  agent_tools.py  agents_registry.py  ai_agent.py  ai_integration_tools.py  code_safety.py  command_exec.py  config.example.json  config_manager.py  deployment_tools.py  failure_recovery.py  file_type_validator.py  git_integration.py  progress.py  runtime_testing.py  sandbox.py  testing_utils.py  tool_system.py  workflow_utils.py
build_my_startup/pipelines/: adaptive_build.py  standard_build.py
build_my_startup/tests/: test_collaboration.py  test_messaging.py  test_simple.py  test_system.py
docs/: MVP_SUMMARY.md  adaptive_build_guide.md  mvp_architecture.md  mvp_idea.md  mvp_review.md
examples/: create_multiple_mvps.py  cursor_agents_example.py  example_conversation.py  mvp_ideation_builder.py  quick_test_build.py  simple_adaptive_build.py
