[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-my-startup"
version = "0.1.0"
description = "A Fully Automated Open-Source AI-Powered Agentic Framework - Build your startup with AI Employees"
authors = [{ name = "souhamb" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["agents", "asyncio", "AI", "openai", "startup", "automation", "code-generation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "openai>=1.0.0",
  "flask>=3.0.0",
  "rich>=13.0.0",
  "pygments>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/ironhide23586/build-my-startup"
Repository = "https://github.com/ironhide23586/build-my-startup"

[tool.setuptools]
packages = ["build_my_startup"]
include-package-data = true

[project.scripts]
build-my-startup = "build_my_startup.__init__:print"
